--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="Expert streetlight installation and maintenance services across Oman. Energy-efficient LED lighting for roads, highways & public areas." />
-  <meta name="keywords" content="Streetlight installation Oman, LED lighting Oman, road lighting services, solar streetlights, highway lighting contractors Oman, public lighting Salalah Muscat" />
+  <meta name="description" content="Streetlight installation and maintenance services in Oman, including LED and solar lighting solutions for roads, highways, and public spaces. Trust AL WEJHA GROUP for dependable outdoor lighting." />
+  <meta name="keywords" content="streetlight installation Oman, LED lighting Oman, solar streetlights Oman, road lighting services Oman, highway lighting, AL WEJHA GROUP" />
   <meta name="author" content="AL WEJHA GROUP" />
   <title>Streetlight Installation & Maintenance in Oman | AL WEJHA GROUP</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-  <script>
-    // JavaScript fallback redirect
-    window.location.href = "https://www.alwejhagroup.com/";
-  </script>
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
@@ -19,83 +15,126 @@
       margin: 0;
       padding: 0;
       color: #333;
+      line-height: 1.6;
     }
     header {
-      background-color: #1c3a6d;
-      color: white;
+      background-color: #0b74de;
+      color: #fff;
       padding: 40px 20px;
       text-align: center;
     }
-    h1 {
+    header h1 {
+      font-size: 2.2rem;
       margin: 0;
-      font-size: 2rem;
+    }
+    nav {
+      text-align: center;
+      margin: 20px 0;
+    }
+    nav a {
+      margin: 0 10px;
+      color: #004080;
+      text-decoration: underline;
+      font-weight: 600;
     }
     section {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
-      text-align: center;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #fff;
     }
-    p {
-      font-size: 1.1rem;
-      line-height: 1.6;
+    h2, h3 {
+      color: #004080;
+    }
+    .cta, .backlink {
+      display: inline-block;
+      background-color: #0b74de;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      margin: 10px 0;
+    }
+    .cta:hover, .backlink:hover {
+      background-color: #095cb5;
     }
     .contact {
-      margin-top: 30px;
+      margin-top: 20px;
+      text-align: center;
     }
     .contact a {
-      display: block;
-      font-size: 1.1rem;
-      color: #1c3a6d;
-      margin-bottom: 10px;
-      text-decoration: none;
-    }
-    .cta, .visit-main {
       display: inline-block;
-      background-color: #1c3a6d;
-      color: white;
-      padding: 12px 24px;
+      margin: 5px 10px;
+      color: #0b74de;
       text-decoration: none;
-      border-radius: 8px;
-      margin-top: 20px;
-      margin-right: 10px;
-    }
-    .cta:hover, .visit-main:hover {
-      background-color: #162d55;
     }
     img.hero-img {
       max-width: 100%;
       height: auto;
-      margin-top: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      margin: 20px 0;
+    }
+    footer {
+      background-color: #e0ecf4;
+      text-align: center;
+      padding: 15px;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Streetlight Installation & Maintenance in Oman</h1>
-    <p>LED & Solar Lighting Solutions for Roads, Highways & Public Spaces</p>
+    <p>LED & Solar Lighting Solutions for Roads & Public Spaces</p>
   </header>
 
-  <section>
-    <img src="./streetlights.webp" alt="Streetlight installation in Oman - LED and Solar Lighting" class="hero-img" loading="lazy">
+  <!-- Navigation with Backlinks to Main Website Pages -->
+  <nav>
+    <a href="https://www.alwejhagroup.com/">Home</a>
+    <a href="https://www.alwejhagroup.com/area-of-expertise" target="_blank">Area Of Expertise</a>
+    <a href="https://www.alwejhagroup.com/our-services" target="_blank">Our Services</a>
+    <a href="https://www.alwejhagroup.com/our-clients" target="_blank">Our Clients</a>
+    <a href="https://www.alwejhagroup.com/contact" target="_blank">Contact</a>
+  </nav>
 
+  <section>
+    <!-- Hero Image -->
+    <img class="hero-img" src="./streetlights.webp" alt="Streetlights in Oman - LED and Solar Lighting Solutions">
+
+    <h2>High-Quality Outdoor Lighting Across Oman</h2>
     <p>
-      AL WEJHA GROUP delivers professional streetlight installation and maintenance across Oman,
-      covering LED lighting, solar-powered poles, and high-mast systems. Our team ensures safe, energy-efficient
-      solutions for roadways, public areas, and infrastructure projects — trusted by government and private sectors alike.
+      AL WEJHA GROUP delivers professional streetlight installation and maintenance for roads, highways, and public spaces across Oman. From LED lighting to solar-powered systems, our energy-efficient solutions help enhance safety and visibility.
     </p>
 
-    <div class="contact">
-      <strong>Contact Us:</strong>
-      <a href="https://wa.me/96879271055" target="_blank">📞 WhatsApp: +96879271055</a>
-      <a href="tel:+96879271055">📱 Call: +96879271055</a>
-      <a href="mailto:business@alwejhagroup.com">📧 Email: business@alwejhagroup.com</a>
-    </div>
+    <h3>Why Choose Our Streetlight Services?</h3>
+    <ul>
+      <li>Expert installation of LED and solar streetlights.</li>
+      <li>Long-lasting, cost-effective lighting solutions.</li>
+      <li>Compliance with local regulations and safety standards.</li>
+      <li>Ongoing maintenance and swift repairs.</li>
+    </ul>
 
-    <a class="cta" href="https://wa.me/96879271055" target="_blank">Request a Lighting Quote</a>
-    <a class="visit-main" href="https://www.alwejhagroup.com" target="_blank">🌐 Visit Main Website</a>
+    <h3>Learn More About AL WEJHA GROUP</h3>
+    <p>
+      Discover our comprehensive range of solutions by visiting our main website:
+      <a class="backlink" href="https://www.alwejhagroup.com/" target="_blank">Visit AL WEJHA GROUP</a>
+    </p>
+
+    <!-- Call-To-Action -->
+    <p>
+      Ready to light up your roads or public spaces? Contact us for a free consultation!
+    </p>
+    <a class="cta" href="https://wa.me/96879271055" target="_blank">Chat on WhatsApp</a>
+    <a class="cta" href="tel:+96879271055">Call Us</a>
+    <a class="cta" href="mailto:business@alwejhagroup.com">Email Us</a>
   </section>
+
+  <footer>
+    <p>&copy; 2025 AL WEJHA GROUP | 
+      <a href="https://www.alwejhagroup.com/sitemap.xml">Sitemap</a> | 
+      <a href="https://www.alwejhagroup.com/privacy-policy">Privacy Policy</a> | 
+      <a href="https://www.alwejhagroup.com/terms-of-service">Terms of Service</a>
+    </p>
+  </footer>
 </body>
 </html>
